tests/internal/negative_case/bad_flow_continue_in_switch.c
int f(int x) {
  switch (x) {
    case 1:
      continue;
    default:
      return 0;
  }
}
